[package]
name = "rugu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bytemuck = "1.13.1"
cgmath = "0.18.0"
image = "0.24.6"
log = "0.4.19"
pretty_env_logger = "0.5.0"
wgpu = "0.16.1"
winit = "0.28.6"
